2008-02-06  Callum McKenzie  <callum@spooky-possum.org>

	* stickynotes_applet.c (stickynotes_applet_update_icon): Patch
	from Brian Cameron to avoid a crash on really small panels. Bug
	#513536.

2008-01-17  Gil Forcada  <gforcada@gnome.org>

	* docs/ca/ca.po: Added Catalan translation.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* stickynotes.glade: Remove padding spaces and use
	GtkAlignment to align text labels. Reported by Christian
	Rose. Patch from Andrew Burton. Closes bug #167209.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am: Added ko to DOC_LINGUAS.
	* ko/ko.po: gnome-doc-utils migration.
	* ko/*.xml: Removed old XMLs.
	* ko/figures/*.png: Removed old images.

2007-11-26  Kosras Papadimas  <pkst@gnome.org>

	* docs/el/el.po: Added Greek translation by Dimitrios Typaldos <dtfedora@yahoo.com>.
	* docs/Makefile.am: Added el to DOC_LINGUAS.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_StickyNotesApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* stickynotes.c: (stickynote_set_locked):
	* stickynotes_applet.c: (stickynotes_applet_init),
	(stickynotes_applet_new), (stickynotes_applet_update_tooltips):
	* stickynotes_applet.h:
	* stickynotes_applet_callbacks.c: (applet_destroy_cb),
	(menu_about_cb):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-07-14  Callum McKenzie  <callum@spooky-possum.org>

	* pixmaps/Makefile.am (install-data-local): Use = instead of ==
	for comparisons to make the scripts work on BSD. See bug #456701.

2007-02-17  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added (British) English translation.
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS

2007-02-10  AP Singh Alam <aalam@users.sf.net>

	*  docs/pa/pa.po: Punjabi Translation is added
	* docs/Makefile.am: pa is added to DOC_LINGUAS
