@@ -57,7 +57,7 @@
 	<default>Sans 10</default>
 	<locale name="C">
 		<short>Default font for new notes</short>
-		<long>Default font for new sticky notes. This should be a Pango Font Name, for example "Sans Italic 10"</long>
+		<long>Default font for new sticky notes. This should be a Pango Font Name, for example "Sans Italic 10".</long>
 	</locale>
 </schema>
 
@@ -141,7 +141,7 @@
 	<default>true</default>
 	<locale name="C">
 		<short>Whether to ask for confirmation when deleting a note</short>
-		<long>Empty notes are always deleted without confirmation</long>
+		<long>Empty notes are always deleted without confirmation.</long>
 	</locale>
 </schema>
 
