@@ -1,3 +1,9 @@
+2008-02-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* stickynotes.schemas.in: Add two missing full stops.
+	* stickynotes_applet_callbacks.c: (desktop_window_event_filter):
+	Add missing return value.
+
 2008-02-06  Callum McKenzie  <callum@spooky-possum.org>
 
 	* stickynotes_applet.c (stickynotes_applet_update_icon): Patch
